# opengl-learning

./: .gitignore  .gitmodules  CMakeLists.txt  Justfile  README.md
apps/: CMakeLists.txt  basic_window.cpp  first_triangle.cpp  utils_triangle.cpp
include/pog/: shader_helpers.h  vertex_helpers.h
src/: CMakeLists.txt  lib.cpp  shaders.cpp
